services/documents/manifests/test/documents-ms-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: documents-api
  namespace: citizens-folder
spec:
  replicas: 1
  selector:
    matchLabels:
      app: documents-api
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: documents-api
    spec:
      containers:
      - name: documents-api
        image: spbpatino/citizens-folder-documents:latest
        imagePullPolicy: Always
        envFrom:
        - configMapRef:
            name: documents-api
        - secretRef:
            name: documents-api
        ports:
        - containerPort: 8400
        resources:
          requests:
            cpu: "250m"
            memory: "256Mi"
          limits:
            cpu: "1"
            memory: "512Mi"
        readinessProbe:
          httpGet:
            path: /api/info
            port: 8400
        livenessProbe:
          httpGet:
            path: /api/info
            port: 8400

      - name: documents-to-certificate-processor
        image: spbpatino/citizens-folder-documents-to-certificate-worker:latest
        imagePullPolicy: Always
        envFrom:
        - configMapRef:
            name: documents-api
        - secretRef:
            name: documents-api
        resources:
          requests:
            cpu: "50m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
      
      - name: delete-user-info-processor
        image: spbpatino/citizens-folder-delete-user-info-documents-worker:latest
        imagePullPolicy: Always
        envFrom:
        - configMapRef:
            name: documents-api
        - secretRef:
            name: documents-api
        resources:
          requests:
            cpu: "50m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
      
      - name: documents-to-register-processor
        image: spbpatino/citizens-folder-documents-to-register-worker:latest
        imagePullPolicy: Always
        envFrom:
        - configMapRef:
            name: documents-api
        - secretRef:
            name: documents-api
        resources:
          requests:
            cpu: "50m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
