services/documents/manifests/test/documents-ms-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: documents-api
  name: documents-api
  namespace: citizens-folder
spec:
  selector:
    app: documents-api
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8400
