services/documents/manifests/test/users-ms-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: users-api
  name: users-api
  namespace: citizens-folder
spec:
  selector:
    app: users-api
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8100
